<?xml version="1.0"?>
<package format="3">
  <name>franka_joint_limit_failsafe</name>
  <version>0.0.1</version>
  <description>Soft-stop controller for FR3 kinesthetic teaching near joint limits.</description>
  <maintainer email="parc@example.com">parc</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
